[project]
name = "contrast-effect-recommend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "nnnnishi", email = "nishimura.kle@gmail.com" }
]
dependencies = [
    "numpy>=2.2.3",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "matplotlib-fontja>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/contrast_effect_recommend"]
